[package]
name = "aer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.4.1"
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.1"
ignore = { version = "0.4.22", features = ["simd-accel"] }
lazy_static = "1.4.0"
rand = "0.8.5"
reqwest = { version = "0.12.3", features = ["multipart", "stream"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
tokio = { version = "1.35.1" }
tokio-util = { version = "0.7.10", features = ["codec"] }
